--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -166,12 +166,12 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/sidebar.js"></script>
-    <script src="js/memberAuth.js"></script>
-    <script src="js/draw_devices.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.5/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="https://kit.fontawesome.com/57c8b4e229.js"></script>
+    <script src="js/sidebar.js"></script>
+    <script src="js/memberAuth.js"></script>
     <script src="js/create_chart.js"></script>
     <script>
         const params = new URLSearchParams(location.search);
