--- a/views/members/login.html
+++ b/views/members/login.html
@@ -36,13 +36,14 @@
                     </div>
                 </div> -->
                 <div class="input-group mb-3">
-                    <input type="email" id="uid" name="uid" class="form-control" placeholder="아이디" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*">
+                    <input type="email" id="uid" name="uid" class="form-control" placeholder="아이디" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*"
+                    required oninvalid="this.setCustomValidity('아이디를 확인하세요.')" oninput="this.setCustomValidity('')">
                     <div class="input-group-append">
                     </div>
                 </div>
                 <div class="input-group mb-3">
                     <input type="password" id="upw" name="upw" class="form-control" placeholder="비밀번호" title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." 
-                     required oninvalid="this.setCustomValidity('비밀번호를 확인하세요.')" oninput="this.setCustomValidity('')">
+                     required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" oninvalid="this.setCustomValidity('비밀번호를 확인하세요.')" oninput="this.setCustomValidity('')">
                 </div>
                 <div class="mb-3">
                     <input type="checkbox" id="cookie" name="cookie">
@@ -75,17 +76,17 @@
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.5/axios.min.js"></script>
 <script>
     $(document).ready(function() {
-        $.ajax({
+        axios({
             url: '/check_idbox',
             method: 'post',
-            success: function(data) {
-                if (data !== undefined && data !== '') {
-                    $('#uid').val(data);
+        }).then(function(data) {
+            if (data.data !== undefined && data.data !== '') {
+                    $('#uid').val(data.data);
                     $('#cookie').prop('checked', true);
                 }
-            }
         })
     }) 
 </script>
