--- a/views/members/modify_profile.html
+++ b/views/members/modify_profile.html
@@ -259,11 +259,11 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dual-listbox/dist/dual-listbox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.5/axios.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="/js/duplicate.js"></script>
     <script src="/js/member_control.js"></script>
     <script src="/js/memberAuth.js"></script>
-    <script src="/js/draw_devices.js"></script>
     <script src="/js/permission_manage.js"></script>
     <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=826fecb6d8bc041c95f1ebfbd7dedcdc&libraries=services"></script>
     <script src="/js/kakao_map.js"></script>
@@ -292,7 +292,6 @@
             $("#uname").val(member[0].name)
 
             $("#upw2").on("focusout", function (e) {
-                console.log(123);
                 var pw = $("#upw").val();
                 var pw2 = $("#upw2").val();
                 if (pw == '' || pw.length == 0 || pw2 == '' || pw.length == 0) { return false; }
@@ -305,7 +304,7 @@
                     $("#reg").attr("type", "button");
                 }
             })
-            $("#delete_member").attr('onclick', `sign('${id}', 1, 0, 0), logout()`);
+            $("#delete_member").attr('onclick', `sign('${id}', 1, 0, 0)`);
         })   
     </script>
 </body>
