--- a/views/student_manage.html
+++ b/views/student_manage.html
@@ -211,7 +211,8 @@
             $("#card_search").css('display', '');
             var datas = [];
 
-            $.ajax({
+
+            axios({
                 url: "/searchTable",
                 method: "post",
                 data: {
@@ -224,61 +225,59 @@
                     start: $("#stdate").val().split(" ~ ")[0],
                     end: $("#stdate").val().split(" ~ ")[1],
                 },
-                success:function(data) {
-                    if (data == '') {
-                        new DataTable('#tables', 
-                            { 
-                                columnDefs: [
-                                    {
-                                        className: 'dt-head-center',
-                                        targets: "_all",
-                                    },
-                                    {
-                                        className: 'dt-body-center',
-                                        targets: "_all",
-                                    },
-                                ],
-                                scrollX: true, paging: true, destroy: true, data: datas 
-                            });
-                    }
-                    $.each(data, (i, v) => {
-                        let level = '';
-                        if (v.level == 0) level = '학생'
-                        else if (v.level == 1) level = '교사'
-                        else if (v.level == 2) level = '일반'
-                        else if (v.level == 3) level = '관리자'
-                        datas.push([
-                            v.id,
-                            v.school,
-                            level,
-                            v.name,
-                            v.grade,
-                            v.class,
-                            v.number,
-                            dayjs(v.date).format("YYYY-MM-DD"),
-                            `<button type="button" class="btn btn-success" onclick="modal_func('${v.id}', ${v.level}, 0)"  id="modal_${v.id}">권한관리</button>`,
-                            `<button type="button" class="btn btn-success" onclick="modal_func('${v.id}', '${v.level}', 1)" id="modal_link_${v.id}">권한관리</button>`,
-                            `<button type="button" class="btn btn-danger" onclick="sign('${v.id}', 1, 0, 0)">삭제</button>`
-                        ])
-                        if (data.length - 1 == i) {
-                            new DataTable('#tables', 
-                            { 
-                                columnDefs: [
-                                    {
-                                        className: 'dt-head-center',
-                                        targets: "_all",
-                                    },
-                                    {
-                                        className: 'dt-body-center',
-                                        targets: "_all",
-                                    },
-                                ],
-                                scrollX: true, paging: true, destroy: true, data: datas 
-                            });
-                        }
-                    })
-                    
+            }).then(function(data) {
+                if (data.data == '') {
+                    new DataTable('#tables', 
+                        { 
+                            columnDefs: [
+                                {
+                                    className: 'dt-head-center',
+                                    targets: "_all",
+                                },
+                                {
+                                    className: 'dt-body-center',
+                                    targets: "_all",
+                                },
+                            ],
+                            scrollX: true, paging: true, destroy: true, data: datas 
+                        });
                 }
+                $.each(data.data, (i, v) => {
+                    let level = '';
+                    if (v.level == 0) level = '학생'
+                    else if (v.level == 1) level = '교사'
+                    else if (v.level == 2) level = '일반'
+                    else if (v.level == 3) level = '관리자'
+                    datas.push([
+                        v.id,
+                        v.school,
+                        level,
+                        v.name,
+                        v.grade,
+                        v.class,
+                        v.number,
+                        dayjs(v.date).format("YYYY-MM-DD"),
+                        `<button type="button" class="btn btn-success" onclick="modal_func('${v.id}', ${v.level}, 0)"  id="modal_${v.id}">권한관리</button>`,
+                        `<button type="button" class="btn btn-success" onclick="modal_func('${v.id}', '${v.level}', 1)" id="modal_link_${v.id}">권한관리</button>`,
+                        `<button type="button" class="btn btn-danger" onclick="sign('${v.id}', 1, 0, 0)">삭제</button>`
+                    ])
+                    if (data.data.length - 1 == i) {
+                        new DataTable('#tables', 
+                        { 
+                            columnDefs: [
+                                {
+                                    className: 'dt-head-center',
+                                    targets: "_all",
+                                },
+                                {
+                                    className: 'dt-body-center',
+                                    targets: "_all",
+                                },
+                            ],
+                            scrollX: true, paging: true, destroy: true, data: datas 
+                        });
+                    }
+                })
             })
         }
     </script>
